--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.14.0"
 pillow = "^9.5.0"
 python-dotenv = "^1.0.0"
 django-cities-light = "^3.9.2"
+drf-yasg = "^1.21.5"
 
 
 [tool.poetry.group.dev.dependencies]
