--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pillow = "^9.5.0"
 python-dotenv = "^1.0.0"
 django-cities-light = "^3.9.2"
 drf-yasg = "^1.21.5"
+djangorestframework-simplejwt = "^5.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
