--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^1.0.0"
 django-cities-light = "^3.9.2"
 drf-yasg = "^1.21.5"
 djangorestframework-simplejwt = "^5.2.2"
+django-cors-headers = "^4.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
