--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ django-cities-light = "^3.9.2"
 drf-yasg = "^1.21.5"
 djangorestframework-simplejwt = "^5.2.2"
 django-cors-headers = "^4.0.0"
+dj-database-url = "^2.0.0"
+psycopg2-binary = "^2.9.6"
+gunicorn = "^20.1.0"
+whitenoise = {extras = ["brotli"], version = "^6.5.0"}
 
 
 [tool.poetry.group.dev.dependencies]
